# django-tutorial

./: .gitignore  README  README.md  pyproject.toml
mysite/: settings.py
polls/: admin.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/admin/: base_site.html
polls/templates/polls/: detail.html  index.html  results.html
