[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Celso Larussa <celsolarussa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
djlint = "^1.35.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"